--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ flake8 = "^7.1.0"
 mypy = "^1.10.1"
 isort = "^5.13.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
